# fuzzolic

./: .gitignore  .gitmodules  build-docker-image.sh  pyproject.toml
docker/fuzzolic-runner/: Dockerfile.Ubuntu2004
fuzzolic/: executor.py  logger.py  minimizer.py  minimizer_qsym.py  testcase_checker.py
solver/: CMakeLists.txt  main.c
tests/: .gitignore  Makefile
tests/example2/: .gitignore  Makefile  gen_input.c  model_malloc.c
